[tool.poetry]
name = "rainbow-bridge"
version = "0.1.0"
description = "Logica de negocio com o Tokyo, Odaiba e Shibaura"
authors = ["Loures <lucasantonio.loures@gmail.com>"]
readme = "README.md"
packages = [{ include = "rainbow_bridge" }]

[tool.poetry.dependencies]
python = "3.11.2"
mysql-connector-python = "8.4.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
